--- a/index.html
+++ b/index.html
@@ -1,1 +1,146 @@
-MOK
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>Your Name | Portfolio</title>	
+	<link rel="stylesheet" href="final.css" />
+
+</head>
+
+<body>
+	
+	<header>
+		<img src="saitama.png" alt="Your Name" />
+		<h1>SAAITAAMAA</h1>
+		<p>Security Engineer, Blockchain Dev, Wannabe Hacker, Anime Superhero, and a few other things!</p>
+		<div class="contacts">
+			<a href="https://x.com/saaaadhjj" target="_blank" aria-label="Twitter" title="Twitter"
+				rel="noopener noreferrer">
+				<!-- Twitter SVG icon -->
+				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#9b59b6"
+					viewBox="0 0 24 24">
+					<path
+						d="M23 3a10.9 10.9 0 01-3.14.86 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5.5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z" />
+				</svg>
+			</a>
+			<a href="https://github.com/SAAITAAMAA" target="_blank" aria-label="GitHub" title="GitHub"
+				rel="noopener noreferrer">
+				<!-- GitHub SVG icon -->
+				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#9b59b6"
+					viewBox="0 0 24 24">
+					<path
+						d="M12 2C6.48 2 2 6.48 2 12a10 10 0 006.84 9.5c.5.1.68-.22.68-.48 0-.24-.01-.87-.01-1.71-2.78.6-3.37-1.34-3.37-1.34-.46-1.16-1.12-1.47-1.12-1.47-.91-.62.07-.61.07-.61 1 .07 1.53 1.03 1.53 1.03.9 1.54 2.37 1.1 2.94.84.09-.66.35-1.1.63-1.35-2.22-.25-4.56-1.12-4.56-5a3.9 3.9 0 011-2.7 3.6 3.6 0 01.1-2.66s.84-.27 2.75 1.02a9.56 9.56 0 015 0c1.9-1.29 2.75-1.02 2.75-1.02a3.59 3.59 0 01.1 2.66 3.92 3.92 0 011 2.7c0 3.88-2.34 4.75-4.57 5 .36.31.68.92.68 1.86 0 1.35-.01 2.44-.01 2.77 0 .26.18.59.69.49A10.02 10.02 0 0022 12c0-5.52-4.48-10-10-10z" />
+				</svg>
+			</a>
+			<a href="mailto:saadelhrj@gmail.com" aria-label="Email" title="Email">
+				<!-- Email SVG icon -->
+				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#9b59b6"
+					viewBox="0 0 24 24">
+					<path
+						d="M12 13.5l8-6V18H4V7.5l8 6zM20 5H4c-1.1 0-2 .9-2 2v1.5l10 7.5 10-7.5V7c0-1.1-.9-2-2-2z" />
+				</svg>
+			</a>
+			<a href="https://www.linkedin.com/in/saad-elharaj-1891371a0/" target="_blank" aria-label="LinkedIn"
+				title="LinkedIn" rel="noopener noreferrer">
+				<!-- LinkedIn SVG icon -->
+				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#9b59b6"
+					viewBox="0 0 24 24">
+					<path
+						d="M4.98 3.5A2.5 2.5 0 002.5 6v12a2.5 2.5 0 002.48 2.5h14.04a2.5 2.5 0 002.48-2.5V6a2.5 2.5 0 00-2.48-2.5H4.98zM8 17H6v-7h2v7zm-1-8.1a1.2 1.2 0 110-2.4 1.2 1.2 0 010 2.4zm11 8.1h-2v-3.5c0-2-.4-3.5-2.5-3.5-1.4 0-2.1 1-2.5 1.9v5.1H9v-7h2v1h.1a2.25 2.25 0 012-1.1c2 0 3 1.3 3 4.1V17z" />
+				</svg>
+			</a>
+		</div>
+		<!--<button id="theme-toggle" aria-label="Toggle light/dark mode" title="Toggle light/dark mode">
+  🌞
+		</button> -->
+
+	</header>
+	<main>
+  <section>
+    <h2>Latest Blogs</h2>
+    <div class="blog-posts">
+
+      <!-- Medium Blog Post 1 -->
+      <article class="blog-post">
+        <h3>Dissecting Conti’s Ransomware Encryption</h3>
+        <p>
+          In-depth Analysis of Conti’s encryption routine.
+        </p>
+        <a href="https://medium.com/@exploitdevvv/dissecting-contis-ransomware-encryption-a24305ff4738"
+           target="_blank" rel="noopener noreferrer" class="read-more">
+          Read on Medium →
+        </a>
+      </article>
+
+      <!-- Medium Blog Post 2 -->
+      <article class="blog-post">
+        <h3>Malware 101: Anti-Virtualization & Anti-Debugging</h3>
+        <p>
+          Malware Techniques to detect & evade analysis.
+        </p>
+        <a href="https://medium.com/@exploitdevvv/malware-101-anti-virtualization-anti-debugging-methods-04353f0a9407"
+           target="_blank" rel="noopener noreferrer" class="read-more">
+          Read on Medium →
+        </a>
+      </article>
+
+      <!-- Your Blog Post 1 
+   
+	  <article class="blog-post">
+        <h3>Future Blog</h3>
+        <p>
+          Weaponizing an Nday.
+        </p>
+        <a href="article1.html" class="read-more">Read More →</a>
+      </article>-->
+
+
+    </div>
+  </section>
+
+  <section class="github-projects">
+    <h2>🛠️ GitHub Projects</h2>
+
+    <div class="blog-post">
+      <h3>EtherHiding Malware</h3>
+      <p>A First of its kind POC of storing shellcode on blockchain and loading it using RUST.</p>
+      <a href="https://github.com/SAAITAAMAA/EtherHiding#" class="read-more" target="_blank" rel="noopener noreferrer">View on GitHub →</a>
+    </div>
+    <!-- Add more projects similarly -->
+  </section>
+
+
+
+</main>
+
+	<footer>
+		<p>&copy; 2025. Written from a place where the power goes out more than I do.</p>
+	</footer>
+	<script>
+  const toggleBtn = document.getElementById('theme-toggle');
+  const body = document.body;
+
+  // Load saved preference
+  if (localStorage.getItem('theme') === 'light') {
+    body.classList.add('light-mode');
+    toggleBtn.textContent = '🌙'; // moon icon
+  }
+
+  toggleBtn.addEventListener('click', () => {
+    body.classList.toggle('light-mode');
+    if (body.classList.contains('light-mode')) {
+      toggleBtn.textContent = '🌙'; // moon icon
+      localStorage.setItem('theme', 'light');
+    } else {
+      toggleBtn.textContent = '🌞'; // sun icon
+      localStorage.setItem('theme', 'dark');
+    }
+  });
+</script>
+
+</body>
+
+</html>
