--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>Your Name | Portfolio</title>	
+	<title>SAAITAAMAA's Portfolio</title>	
 	<link rel="stylesheet" href="final.css" />
 
 </head>
